# clickdump

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-pypi.yml  run_tests.yml
src/clickdump/: __init__.py  _serializer.py  _types.py  _values.py  models.py
tests/: conftest.py  test_models.py  test_schema.py  test_serialization.py  test_types.py  test_values.py
tests/schema/: schema-v1.json
