[project]
name = "clickdump"
readme = "README.md"
requires-python = ">=3.9"
description = "Serialize Click CLIs to JSON"
dependencies = [
    "click>=8.1.8",
]
dynamic = ["version"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clickdump"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
